# debiased-grpo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: gsm8k_qwen05b.yaml
notes/: bias_diagnostics.md  derivation.md  experiments.md  implementation_notes.md  related_work.md
scripts/: baseline_bias_resample.py  bias1_isweight.py  bias_diagnostics.py  eval_by_difficulty.py  per_token_bias.py  plot_bias_diagnostics.py  plot_training_trajectories.py  train_grpo.py
src/debiased_grpo/: config.py  losses.py  sampling.py  strategies.py  trainer.py  utils.py
tests/: conftest.py  test_baseline_algebra.py  test_losses.py  test_sampling.py  test_smoke.py  test_strategies.py  test_trainer.py  test_unbiasedness.py  test_utils.py
